# distributed_ros

./: DropTask.msg  DropTaskArray.msg  NumpyArray.msg  README.md  apso.py  check_ros_master.sh  communication.py  coordinator_node.py  docker-compose.yml  fitness_ea.py  fitness_eu.py  ga.py  lookup_table.pkl  mva.py  mvo.py  pso.py  requirements.txt  robot_node.py  run.py  table.py  task.py  utilities.py
coordinator_docker/: CMakeLists.txt  Dockerfile
robot_docker/: CMakeLists.txt  Dockerfile
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: DropTask.msg  DropTaskArray.msg  FitnessValue.msg  Parameters.msg  RobotStatusArray.msg  RobotStatusM.msg  UniverseArray.msg
robot_msgs/srv/: RobotStatus.srv
ros_master_docker/: Dockerfile
task_docker/: CMakeLists.txt  Dockerfile
