<?xml version="1.0"?>
<package format="2">
  <name>robot_msgs</name>
  <version>0.0.0</version>
  <description>Shared messages for robot and coordinator</description>

  <maintainer email="david.scalais@gmail.com">David Scalais</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
